--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,214 @@
 .App {
+  background-image: url("./background.jpg");
+  height: 100vh;
+  background-color: #001630;
+  margin-top: 0px;
+  overflow-y: auto;
+}
+
+.App-header {
+  margin-top: 51px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: #ffffff;
+}
+
+.App-body {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding: 30px;
+  color: #ffffff;
+}
+
+.App-footer {
+  position: absolute;
+  bottom: 0px;
+  height: 86px;
+  width: 165px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #cacaca;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.App-header-text {
+  margin-block-start: 0;
+}
+
+.Nav-bar {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  background-image: url("./background.jpg");
+  background-color: #001630;
+  top: 0px;
+  z-index: 999;
+}
+
+.Nav-links {
+  float: right;
+  padding: 15px;
+  color: #ffffff;
   text-align: center;
+  text-decoration: none;
+}
+
+.Nav-links:hover {
+  background-color: rgba(105, 105, 105, 0.7);
+  color: #ffffff;
+}
+
+.active {
+  border-bottom:3px solid red;
+}
+
+.Act-desc {
+  padding-left: 30px;
+  padding-right: 50px;
+  text-align: justify;
+}
+
+.Act-title {
+  padding-left: 25px;
+  display: inline;
+}
+
+.Act-company {
+  display: inline;
+  color: red;
+}
+
+.Act-img {
+  width: 20%;
+}
+
+.Social-logo {
+  height: 46px;
+  padding: 18px;
+}
+
+.prof-pic {
+  width: 30%;
+  height: auto;
+  border-radius: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border: 3px solid white;
+}
+
+.intro {
+  margin-right: 25%;
+  margin-left: 25%;
+  text-align: center;
+  color: #ffffff;
+}
+
+.resume {
+  width: 66%;
+  height: calc(66vw * (2200/1700));
+}
+
+.form-input {
+  margin-top: 10px;
+}
+
+.emailSent {
+  border: 1px solid rgb(0, 255, 8);
+  background-color: rgba(164,255,169, 0.5);
+  border-radius: 4px;
+  margin-top: 20px;
+  padding: 12px;
+  display: inline-block;
+}
+
+.emailError {
+  border: 1px solid rgb(255, 0, 0);
+  background-color: rgba(255, 172, 172, 0.5);
+  border-radius: 4px;
+  margin-top: 20px;
+  padding: 12px;
+  display: inline-block;
+}
+
+label {
+  display:block;
+  clear: both;
+}
+
+input[type=text],input[type=email], textarea {
+  width: 40%;                     
+  padding: 12px;                     
+  border: 1px solid #ccc;                     
+  border-radius: 4px;                     
+  box-sizing: border-box;                     
+  margin-top: 6px;                     
+  resize: vertical;                     
+} 
+
+button[type=submit] {
+  background-color: #4CAF50;              
+  color: white;              
+  padding: 12px 20px;              
+  border: none;              
+  border-radius: 4px;              
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+button[type=submit]:hover {              
+  background-color: #45a049;              
+ }
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+
+  .resume {
+    width: 100%;
+    height: calc(100% * (2200/1700));
+  }
+
+
+  .intro {
+    margin-right: 5%;
+    margin-left: 5%;
+  }
+
+  .Nav-links {
+    padding: 10px 5px 10px 5px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .App-header {
+    margin-top: 41px;
+  }
+
+  .Act-desc {
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: unset;
+  }
+
+  .Act-title {
+    padding-left: 5px;
+    display: block;
+  }
+  
+  .Act-company {
+    display: block;
+  }
+
+  .Act-img {
+    width: 100%;
+  }
+
+  input[type=text],input[type=email], textarea {
+    width: 100%;
+  }
 }
