--- a/src/App.css
+++ b/src/App.css
@@ -100,14 +100,72 @@
   grid-row-end: 6;
 }
 
-.walletConnection {
+.Nav-bar {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  top: 0px;
+  z-index: 999;
+}
+
+.Nav-links {
+  float: right;
+  padding: 15px;
+  color: #ffffff;
   text-align: center;
+  text-decoration: none;
+}
+
+.Nav-socials {
+  float: left;
+}
+
+/* .walletConnection {
+  text-align: center;
+  position: absolute;
+  top: 1%;
+  right: 1%;
+} */
+
+.walletContainer {
+  text-align: center;
+  left: 0;
+  right: 0;
+}
+
+.walletMain {
+  position: relative;
+  width: 300px;
+  min-height: 600px;
+  margin: auto;
+  padding-top: 0px;
+}
+
+.walletMain:before{
+  content:'';
+  position: absolute;
+  width: 200px;
+  height: 100px;
+  margin: auto;
+  z-index: -1;
+  background-color: lightgray;
+  border: 4px solid #DAA520;
+  border-radius: 10%;
+  left: 40px;
 }
 
 .walletText {
-  color: #800020;
+  color: #0000FF;
   padding-top: 15px;
   font-weight: bold;
+  padding-bottom: 7px;
+  /* width: 200px;
+  height: 100px;
+  background-color: gray; */
+}
+
+.walletMint {
+  color: white;
 }
 
 .traitsRow {
@@ -154,20 +212,6 @@
   background-color: inherit;
   width: 50%;
 }
-
-/* The circles on the timeline */
-/* .container::after {
-  content: '';
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  right: -17px;
-  background-color: white;
-  border: 4px solid #FF9F55;
-  top: 15px;
-  border-radius: 50%;
-  z-index: 1;
-} */
 
 /* Place the container to the left */
 .left {
@@ -219,47 +263,6 @@
   border-radius: 6px;
 }
 
-/* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
-/* Place the timelime to the left */
-  .timeline::after {
-    left: 31px;
-  }
-
-/* Full-width containers */
-  .container {
-    width: 100%;
-    padding-left: 70px;
-    padding-right: 25px;
-  }
-
-/* Make sure that all arrows are pointing leftwards */
-  .container::before {
-    left: 60px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
-  }
-
-/* Make sure all circles are at the same spot */
-  .left::after, .right::after {
-    left: 15px;
-  }
-
-/* Make all right containers behave like the left ones */
-  .right {
-    left: 0%;
-  }
-
-  .aboutRow {
-    display: inline;
-  }
-
-  .adoptionBear, .container, .gallery_img { 
-    width: 100%
-  }
-}
-
 .roadmap {
   font-weight: bold;
   font-size: 110%;
@@ -273,7 +276,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: #ffffff;
+  color: #0000FF;
 }
 
 .App-body {
@@ -294,12 +297,12 @@
 .App-header-text {
   margin-block-start: 0;
   font-weight: bold;
-  color: #800020;
+  color: #0000FF;
 }
 
 .Act-desc {
-  padding-left: 30px;
-  padding-right: 50px;
+  padding-left: 0px;
+  padding-right: 150px;
   text-align: justify;
   color: black;
   padding-top: 10px;
@@ -324,55 +327,6 @@
   height: 80px;
   padding: 18px;
 }
-
-@media only screen and (max-width: 768px) {
-  /* For mobile phones: */
-
-  .resume {
-    width: 100%;
-    height: calc(100% * (2200/1700));
-  }
-
-
-  .intro {
-    margin-right: 5%;
-    margin-left: 5%;
-  }
-
-  .Nav-links {
-    padding: 10px 5px 10px 5px;
-    display: flex;
-    justify-content: center;
-  }
-
-  .App-header {
-    margin-top: 41px;
-  }
-
-  .Act-desc {
-    padding-left: 10px;
-    padding-right: 10px;
-    text-align: unset;
-  }
-
-  .Act-title {
-    padding-left: 5px;
-    display: block;
-  }
-  
-  .Act-company {
-    display: block;
-  }
-
-  .Act-img {
-    width: 100%;
-  }
-
-  input[type=text],input[type=email], textarea {
-    width: 100%;
-  }
-}
-
 
 * {
     margin: 0;
@@ -488,3 +442,94 @@ p {
 }
 
 
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 768px) {
+  /* Place the timelime to the left */
+    .timeline::after {
+      left: 31px;
+    }
+  
+  /* Full-width containers */
+    .container {
+      width: 100%;
+      padding-left: 70px;
+      padding-right: 25px;
+    }
+  
+  /* Make sure that all arrows are pointing leftwards */
+    .container::before {
+      left: 60px;
+      border: medium solid white;
+      border-width: 10px 10px 10px 0;
+      border-color: transparent white transparent transparent;
+    }
+  
+  /* Make sure all circles are at the same spot */
+    .left::after, .right::after {
+      left: 15px;
+    }
+  
+  /* Make all right containers behave like the left ones */
+    .right {
+      left: 0%;
+    }
+  
+    .aboutRow {
+      display: inline;
+    }
+  
+    .adoptionBear, .container, .gallery_img { 
+      width: 100%
+    }
+  }
+
+  @media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+  
+  
+    .intro {
+      margin-right: 5%;
+      margin-left: 5%;
+    }
+  
+    .Nav-bar {
+      overflow: hidden;
+      position: fixed;
+      width: 100%;
+      top: 0px;
+      z-index: 999;
+    }
+  
+    .Nav-links {
+      padding: 10px 5px 10px 5px;
+      display: flex;
+      justify-content: center;
+    }
+  
+    .App-header {
+      margin-top: 41px;
+    }
+  
+    .Act-desc {
+      padding-left: 10px;
+      padding-right: 10px;
+      text-align: unset;
+    }
+  
+    .Act-title {
+      padding-left: 5px;
+      display: block;
+    }
+    
+    .Act-company {
+      display: block;
+    }
+  
+    .Act-img {
+      width: 100%;
+    }
+  
+    input[type=text],input[type=email], textarea {
+      width: 100%;
+    }
+  }
