--- a/src/App.css
+++ b/src/App.css
@@ -82,19 +82,27 @@
 
 
 .App-header {
-  margin-top: 350px;
+  margin-top: 150px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: #3F51B5;
+  height: auto;
+}
+
+.App-header-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .App-header-text {
   margin-block-start: 0;
   font-weight: bold;
-  color: black;
+  color:black;
   padding-bottom: 10px;
 }
 
@@ -105,7 +113,8 @@
   align-items: center;
   justify-content: center;
   font-size: calc(5px + 2vmin);
-  color: black;
+  color: #1e1e2e;
+  font-size: 30px;
   width: 60%;
   margin-left: auto;
   margin-right: auto;
