--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Niramit:300,300i,700');
 
 .App-First-Page {
-  background-color: #27293d;
+  background-color: #1e1e2e;
   height: 100vh;
   background-size: cover;
   margin-top: 0px;
@@ -11,14 +11,14 @@
 .App {
   background-image: url("./background.jpg");
   height: 100vh;
-  background-color: #001630;
+  background-color: #1e1e2e;
   background-size: cover;
   margin-top: 0px;
   overflow-y: auto;
 }
 
 .adopt-Recruit {
-  background-color: #1e1e2e;
+  background-color: #27293d;
   height: 500px;
   margin-top: 0px;
 }
@@ -49,8 +49,85 @@
   font-weight: bold;
 }
 
+.adopt-image {
+  background-image: url('./wood.png')
+}
+
 .aboutRow {
   display: flex;
+}
+
+.traits {
+  background-color: #27293d;
+  height: 500px;
+  margin-top: 0px;
+}
+
+.traits-header {
+  font-size: 40px;
+  text-align: center;
+  padding-top: 50px;
+}
+
+.traits-nav {
+  text-align: center;
+}
+
+.traits-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.traits-button {
+  padding: 10px;
+}
+
+.traits-model {
+  background-color: #27293d;
+  border: 1px solid #fad6a5;
+  border-radius: 13px;
+  cursor: pointer;
+  padding: 7px 20px;
+  margin-bottom: 10px;
+  color: #fad6a5;
+  font-size: 16px;
+  display: block;
+}
+
+.traits-main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 48px;
+  padding-bottom: 50px;
+  overflow: hidden;
+}
+
+.traits-wrap {
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+  display: flex;
+  top: 0;
+  left: 0;
+  padding: 0px;
+}
+
+.traits-box {
+  border: 5px solid #fff;
+  width: 100px;
+  box-shadow: 0 0 18px #ff9330;
+  border-radius: 20px;
+}
+
+.traits-img {
+  width: 50%;
+  height: 50%;
+  margin: auto;
+  display: block;
+  text-align: center;
+  justify-content: center;
 }
 
 .aboutColumn{
@@ -112,9 +189,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(5px + 2vmin);
+  font-size: calc(10px + 2vmin);
+  font-weight: bold;
   color: #1e1e2e;
-  font-size: 30px;
   width: 60%;
   margin-left: auto;
   margin-right: auto;
