--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,9 @@
 
 .traits-text {
   text-align: center;
+  font-size: 15px;
+  font-weight: bold;
+  text-shadow: 1px 0.5px gold;
 }
 
 .traits-header {
@@ -233,6 +236,7 @@
 .traits-button {
   margin-right: 10px !important;
   margin-left: 10px !important;
+  text-shadow: .2px 0.25px blue;
 }
 
 .traits-model {
