--- a/src/App.css
+++ b/src/App.css
@@ -231,12 +231,15 @@
   grid-row-end: 7;
 }
 
-
-
 .traits-button {
-  margin-right: 10px !important;
-  margin-left: 10px !important;
-  text-shadow: .2px 0.25px blue;
+  /* width: 100%;
+  height: 100%;
+  margin: auto;
+  display: block;
+  text-align: center;
+  justify-content: center; */
+  padding: 20px;
+  max-width: 200px;
 }
 
 .traits-model {
