--- a/src/App.css
+++ b/src/App.css
@@ -240,6 +240,7 @@
   justify-content: center; */
   padding: 20px;
   max-width: 200px;
+  margin: 5px 10px !important;
 }
 
 .traits-model {
@@ -857,5 +858,9 @@ p {
     .aboutColumn {
       width: unset;
       padding: 32px;
+    }
+
+    .traits-img-special {
+      padding: 20px 45px;
     }
   }
